src/parser/src/SimpleRustParser.ts
// Generated from src/SimpleRust.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { SimpleRustListener } from "./SimpleRustListener.js";
import { SimpleRustVisitor } from "./SimpleRustVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class SimpleRustParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly T__20 = 21;
    public static readonly T__21 = 22;
    public static readonly T__22 = 23;
    public static readonly T__23 = 24;
    public static readonly T__24 = 25;
    public static readonly T__25 = 26;
    public static readonly T__26 = 27;
    public static readonly IDENTIFIER = 28;
    public static readonly NUMBER = 29;
    public static readonly STRING = 30;
    public static readonly BOOLEAN = 31;
    public static readonly WHITESPACE = 32;
    public static readonly RULE_program = 0;
    public static readonly RULE_function = 1;
    public static readonly RULE_block = 2;
    public static readonly RULE_parameter_list = 3;
    public static readonly RULE_expression_list = 4;
    public static readonly RULE_parameter = 5;
    public static readonly RULE_type = 6;
    public static readonly RULE_statement = 7;
    public static readonly RULE_variable_declaration = 8;
    public static readonly RULE_expression_statement = 9;
    public static readonly RULE_expression = 10;

    public static readonly literalNames = [
        null, "'fn'", "'('", "')'", "'->'", "'{'", "'}'", "','", "':'", 
        "'&'", "'mut'", "'i32'", "'f64'", "'bool'", "'String'", "'Vec'", 
        "'<'", "'>'", "'&mut'", "'let'", "'='", "';'", "'+'", "'-'", "'vec!'", 
        "'['", "']'", "'.push'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, "IDENTIFIER", "NUMBER", "STRING", 
        "BOOLEAN", "WHITESPACE"
    ];
    public static readonly ruleNames = [
        "program", "function", "block", "parameter_list", "expression_list", 
        "parameter", "type", "statement", "variable_declaration", "expression_statement", 
        "expression",
    ];

    public get grammarFileName(): string { return "SimpleRust.g4"; }
    public get literalNames(): (string | null)[] { return SimpleRustParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return SimpleRustParser.symbolicNames; }
    public get ruleNames(): string[] { return SimpleRustParser.ruleNames; }
    public get serializedATN(): number[] { return SimpleRustParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, SimpleRustParser._ATN, SimpleRustParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, SimpleRustParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 25;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 1) {
                {
                {
                this.state = 22;
                this.function_();
                }
                }
                this.state = 27;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 28;
            this.match(SimpleRustParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public function_(): FunctionContext {
        let localContext = new FunctionContext(this.context, this.state);
        this.enterRule(localContext, 2, SimpleRustParser.RULE_function);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 30;
            this.match(SimpleRustParser.T__0);
            this.state = 31;
            this.match(SimpleRustParser.IDENTIFIER);
            this.state = 32;
            this.match(SimpleRustParser.T__1);
            this.state = 34;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 28) {
                {
                this.state = 33;
                this.parameter_list();
                }
            }

            this.state = 36;
            this.match(SimpleRustParser.T__2);
            this.state = 37;
            this.match(SimpleRustParser.T__3);
            this.state = 38;
            this.type_();
            this.state = 39;
            this.block();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public block(): BlockContext {
        let localContext = new BlockContext(this.context, this.state);
        this.enterRule(localContext, 4, SimpleRustParser.RULE_block);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 41;
            this.match(SimpleRustParser.T__4);
            this.state = 45;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4044096036) !== 0)) {
                {
                {
                this.state = 42;
                this.statement();
                }
                }
                this.state = 47;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 48;
            this.match(SimpleRustParser.T__5);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parameter_list(): Parameter_listContext {
        let localContext = new Parameter_listContext(this.context, this.state);
        this.enterRule(localContext, 6, SimpleRustParser.RULE_parameter_list);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 50;
            this.parameter();
            this.state = 55;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 7) {
                {
                {
                this.state = 51;
                this.match(SimpleRustParser.T__6);
                this.state = 52;
                this.parameter();
                }
                }
                this.state = 57;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public expression_list(): Expression_listContext {
        let localContext = new Expression_listContext(this.context, this.state);
        this.enterRule(localContext, 8, SimpleRustParser.RULE_expression_list);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 59;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4043571716) !== 0)) {
                {
                this.state = 58;
                this.expression(0);
                }
            }

            this.state = 65;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 7) {
                {
                {
                this.state = 61;
                this.match(SimpleRustParser.T__6);
                this.state = 62;
                this.expression(0);
                }
                }
                this.state = 67;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public parameter(): ParameterContext {
        let localContext = new ParameterContext(this.context, this.state);
        this.enterRule(localContext, 10, SimpleRustParser.RULE_parameter);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 68;
            this.match(SimpleRustParser.IDENTIFIER);
            this.state = 69;
            this.match(SimpleRustParser.T__7);
            this.state = 71;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 6, this.context) ) {
            case 1:
                {
                this.state = 70;
                this.match(SimpleRustParser.T__8);
                }
                break;
            }
            this.state = 74;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 10) {
                {
                this.state = 73;
                this.match(SimpleRustParser.T__9);
                }
            }

            this.state = 76;
            this.type_();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public type_(): TypeContext {
        let localContext = new TypeContext(this.context, this.state);
        this.enterRule(localContext, 12, SimpleRustParser.RULE_type);
        try {
            this.state = 91;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case SimpleRustParser.T__10:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 78;
                this.match(SimpleRustParser.T__10);
                }
                break;
            case SimpleRustParser.T__11:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 79;
                this.match(SimpleRustParser.T__11);
                }
                break;
            case SimpleRustParser.T__12:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 80;
                this.match(SimpleRustParser.T__12);
                }
                break;
            case SimpleRustParser.T__13:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 81;
                this.match(SimpleRustParser.T__13);
                }
                break;
            case SimpleRustParser.T__14:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 82;
                this.match(SimpleRustParser.T__14);
                this.state = 83;
                this.match(SimpleRustParser.T__15);
                this.state = 84;
                this.type_();
                this.state = 85;
                this.match(SimpleRustParser.T__16);
                }
                break;
            case SimpleRustParser.T__8:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 87;
                this.match(SimpleRustParser.T__8);
                this.state = 88;
                this.type_();
                }
                break;
            case SimpleRustParser.T__17:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 89;
                this.match(SimpleRustParser.T__17);
                this.state = 90;
                this.type_();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 14, SimpleRustParser.RULE_statement);
        try {
            this.state = 96;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case SimpleRustParser.T__18:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 93;
                this.variable_declaration();
                }
                break;
            case SimpleRustParser.T__1:
            case SimpleRustParser.T__8:
            case SimpleRustParser.T__17:
            case SimpleRustParser.T__23:
            case SimpleRustParser.IDENTIFIER:
            case SimpleRustParser.NUMBER:
            case SimpleRustParser.STRING:
            case SimpleRustParser.BOOLEAN:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 94;
                this.expression_statement();
                }
                break;
            case SimpleRustParser.T__4:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 95;
                this.block();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public variable_declaration(): Variable_declarationContext {
        let localContext = new Variable_declarationContext(this.context, this.state);
        this.enterRule(localContext, 16, SimpleRustParser.RULE_variable_declaration);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 98;
            this.match(SimpleRustParser.T__18);
            this.state = 100;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 10) {
                {
                this.state = 99;
                this.match(SimpleRustParser.T__9);
                }
            }

            this.state = 102;
            this.match(SimpleRustParser.IDENTIFIER);
            this.state = 103;
            this.match(SimpleRustParser.T__7);
            this.state = 104;
            this.type_();
            this.state = 105;
            this.match(SimpleRustParser.T__19);
            this.state = 106;
            this.expression(0);
            this.state = 107;
            this.match(SimpleRustParser.T__20);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public expression_statement(): Expression_statementContext {
        let localContext = new Expression_statementContext(this.context, this.state);
        this.enterRule(localContext, 18, SimpleRustParser.RULE_expression_statement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 109;
            this.expression(0);
            this.state = 110;
            this.match(SimpleRustParser.T__20);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public expression(): ExpressionContext;
    public expression(_p: number): ExpressionContext;
    public expression(_p?: number): ExpressionContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new ExpressionContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 20;
        this.enterRecursionRule(localContext, 20, SimpleRustParser.RULE_expression, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 144;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 11, this.context) ) {
            case 1:
                {
                this.state = 113;
                this.match(SimpleRustParser.IDENTIFIER);
                }
                break;
            case 2:
                {
                this.state = 114;
                this.match(SimpleRustParser.NUMBER);
                }
                break;
            case 3:
                {
                this.state = 115;
                this.match(SimpleRustParser.STRING);
                }
                break;
            case 4:
                {
                this.state = 116;
                this.match(SimpleRustParser.BOOLEAN);
                }
                break;
            case 5:
                {
                this.state = 117;
                this.match(SimpleRustParser.T__1);
                this.state = 118;
                this.expression(0);
                this.state = 119;
                this.match(SimpleRustParser.T__2);
                }
                break;
            case 6:
                {
                this.state = 121;
                this.match(SimpleRustParser.IDENTIFIER);
                this.state = 122;
                this.match(SimpleRustParser.T__19);
                this.state = 123;
                this.expression(6);
                }
                break;
            case 7:
                {
                this.state = 124;
                this.match(SimpleRustParser.T__8);
                this.state = 125;
                this.match(SimpleRustParser.IDENTIFIER);
                }
                break;
            case 8:
                {
                this.state = 126;
                this.match(SimpleRustParser.T__17);
                this.state = 127;
                this.match(SimpleRustParser.IDENTIFIER);
                }
                break;
            case 9:
                {
                this.state = 128;
                this.match(SimpleRustParser.IDENTIFIER);
                this.state = 129;
                this.match(SimpleRustParser.T__1);
                this.state = 130;
                this.expression_list();
                this.state = 131;
                this.match(SimpleRustParser.T__2);
                }
                break;
            case 10:
                {
                this.state = 133;
                this.match(SimpleRustParser.T__23);
                this.state = 134;
                this.match(SimpleRustParser.T__24);
                this.state = 135;
                this.expression_list();
                this.state = 136;
                this.match(SimpleRustParser.T__25);
                }
                break;
            case 11:
                {
                this.state = 138;
                this.match(SimpleRustParser.IDENTIFIER);
                this.state = 139;
                this.match(SimpleRustParser.T__26);
                this.state = 140;
                this.match(SimpleRustParser.T__1);
                this.state = 141;
                this.expression(0);
                this.state = 142;
                this.match(SimpleRustParser.T__2);
                }
                break;
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 151;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 12, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    {
                    localContext = new ExpressionContext(parentContext, parentState);
                    this.pushNewRecursionContext(localContext, _startState, SimpleRustParser.RULE_expression);
                    this.state = 146;
                    if (!(this.precpred(this.context, 7))) {
                        throw this.createFailedPredicateException("this.precpred(this.context, 7)");
                    }
                    this.state = 147;
                    _la = this.tokenStream.LA(1);
                    if(!(_la === 22 || _la === 23)) {
                    this.errorHandler.recoverInline(this);
                    }
                    else {
                        this.errorHandler.reportMatch(this);
                        this.consume();
                    }
                    this.state = 148;
                    this.expression(8);
                    }
                    }
                }
                this.state = 153;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 12, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }

    public override sempred(localContext: antlr.ParserRuleContext | null, ruleIndex: number, predIndex: number): boolean {
        switch (ruleIndex) {
        case 10:
            return this.expression_sempred(localContext as ExpressionContext, predIndex);
        }
        return true;
    }
    private expression_sempred(localContext: ExpressionContext | null, predIndex: number): boolean {
        switch (predIndex) {
        case 0:
            return this.precpred(this.context, 7);
        }
        return true;
    }


    private static __ATN: antlr.ATN;
    public static get _ATN(): antlr.ATN {
        if (!SimpleRustParser.__ATN) {
            SimpleRustParser.__ATN = new antlr.ATNDeserializer().deserialize(SimpleRustParser._serializedATN);
        }

        return SimpleRustParser.__ATN;
    }


    private static readonly vocabulary = new antlr.Vocabulary(SimpleRustParser.literalNames, SimpleRustParser.symbolicNames, []);

    public override get vocabulary(): antlr.Vocabulary {
        return SimpleRustParser.vocabulary;
    }

    private static readonly decisionsToDFA = SimpleRustParser._ATN.decisionToState.map( (ds: antlr.DecisionState, index: number) => new antlr.DFA(ds, index) );
}

export class ProgramContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public EOF(): antlr.TerminalNode {
        return this.getToken(SimpleRustParser.EOF, 0)!;
    }
    public function_(): FunctionContext[];
    public function_(i: number): FunctionContext | null;
    public function_(i?: number): FunctionContext[] | FunctionContext | null {
        if (i === undefined) {
            return this.getRuleContexts(FunctionContext);
        }

        return this.getRuleContext(i, FunctionContext);
    }
    public override get ruleIndex(): number {
        return SimpleRustParser.RULE_program;
    }
    public override enterRule(listener: SimpleRustListener): void {
        if(listener.enterProgram) {
             listener.enterProgram(this);
        }
    }
    public override exitRule(listener: SimpleRustListener): void {
        if(listener.exitProgram) {
             listener.exitProgram(this);
        }
    }
    public override accept<Result>(visitor: SimpleRustVisitor<Result>): Result | null {
        if (visitor.visitProgram) {
            return visitor.visitProgram(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class FunctionContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public IDENTIFIER(): antlr.TerminalNode {
        return this.getToken(SimpleRustParser.IDENTIFIER, 0)!;
    }
    public type(): TypeContext {
        return this.getRuleContext(0, TypeContext)!;
    }
    public block(): BlockContext {
        return this.getRuleContext(0, BlockContext)!;
    }
    public parameter_list(): Parameter_listContext | null {
        return this.getRuleContext(0, Parameter_listContext);
    }
    public override get ruleIndex(): number {
        return SimpleRustParser.RULE_function;
    }
    public override enterRule(listener: SimpleRustListener): void {
        if(listener.enterFunction) {
             listener.enterFunction(this);
        }
    }
    public override exitRule(listener: SimpleRustListener): void {
        if(listener.exitFunction) {
             listener.exitFunction(this);
        }
    }
    public override accept<Result>(visitor: SimpleRustVisitor<Result>): Result | null {
        if (visitor.visitFunction) {
            return visitor.visitFunction(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class BlockContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public statement(): StatementContext[];
    public statement(i: number): StatementContext | null;
    public statement(i?: number): StatementContext[] | StatementContext | null {
        if (i === undefined) {
            return this.getRuleContexts(StatementContext);
        }

        return this.getRuleContext(i, StatementContext);
    }
    public override get ruleIndex(): number {
        return SimpleRustParser.RULE_block;
    }
    public override enterRule(listener: SimpleRustListener): void {
        if(listener.enterBlock) {
             listener.enterBlock(this);
        }
    }
    public override exitRule(listener: SimpleRustListener): void {
        if(listener.exitBlock) {
             listener.exitBlock(this);
        }
    }
    public override accept<Result>(visitor: SimpleRustVisitor<Result>): Result | null {
        if (visitor.visitBlock) {
            return visitor.visitBlock(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class Parameter_listContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public parameter(): ParameterContext[];
    public parameter(i: number): ParameterContext | null;
    public parameter(i?: number): ParameterContext[] | ParameterContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ParameterContext);
        }

        return this.getRuleContext(i, ParameterContext);
    }
    public override get ruleIndex(): number {
        return SimpleRustParser.RULE_parameter_list;
    }
    public override enterRule(listener: SimpleRustListener): void {
        if(listener.enterParameter_list) {
             listener.enterParameter_list(this);
        }
    }
    public override exitRule(listener: SimpleRustListener): void {
        if(listener.exitParameter_list) {
             listener.exitParameter_list(this);
        }
    }
    public override accept<Result>(visitor: SimpleRustVisitor<Result>): Result | null {
        if (visitor.visitParameter_list) {
            return visitor.visitParameter_list(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class Expression_listContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public expression(): ExpressionContext[];
    public expression(i: number): ExpressionContext | null;
    public expression(i?: number): ExpressionContext[] | ExpressionContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ExpressionContext);
        }

        return this.getRuleContext(i, ExpressionContext);
    }
    public override get ruleIndex(): number {
        return SimpleRustParser.RULE_expression_list;
    }
    public override enterRule(listener: SimpleRustListener): void {
        if(listener.enterExpression_list) {
             listener.enterExpression_list(this);
        }
    }
    public override exitRule(listener: SimpleRustListener): void {
        if(listener.exitExpression_list) {
             listener.exitExpression_list(this);
        }
    }
    public override accept<Result>(visitor: SimpleRustVisitor<Result>): Result | null {
        if (visitor.visitExpression_list) {
            return visitor.visitExpression_list(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ParameterContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public IDENTIFIER(): antlr.TerminalNode {
        return this.getToken(SimpleRustParser.IDENTIFIER, 0)!;
    }
    public type(): TypeContext {
        return this.getRuleContext(0, TypeContext)!;
    }
    public override get ruleIndex(): number {
        return SimpleRustParser.RULE_parameter;
    }
    public override enterRule(listener: SimpleRustListener): void {
        if(listener.enterParameter) {
             listener.enterParameter(this);
        }
    }
    public override exitRule(listener: SimpleRustListener): void {
        if(listener.exitParameter) {
             listener.exitParameter(this);
        }
    }
    public override accept<Result>(visitor: SimpleRustVisitor<Result>): Result | null {
        if (visitor.visitParameter) {
            return visitor.visitParameter(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class TypeContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public type(): TypeContext | null {
        return this.getRuleContext(0, TypeContext);
    }
    public override get ruleIndex(): number {
        return SimpleRustParser.RULE_type;
    }
    public override enterRule(listener: SimpleRustListener): void {
        if(listener.enterType) {
             listener.enterType(this);
        }
    }
    public override exitRule(listener: SimpleRustListener): void {
        if(listener.exitType) {
             listener.exitType(this);
        }
    }
    public override accept<Result>(visitor: SimpleRustVisitor<Result>): Result | null {
        if (visitor.visitType) {
            return visitor.visitType(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class StatementContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public variable_declaration(): Variable_declarationContext | null {
        return this.getRuleContext(0, Variable_declarationContext);
    }
    public expression_statement(): Expression_statementContext | null {
        return this.getRuleContext(0, Expression_statementContext);
    }
    public block(): BlockContext | null {
        return this.getRuleContext(0, BlockContext);
    }
    public override get ruleIndex(): number {
        return SimpleRustParser.RULE_statement;
    }
    public override enterRule(listener: SimpleRustListener): void {
        if(listener.enterStatement) {
             listener.enterStatement(this);
        }
    }
    public override exitRule(listener: SimpleRustListener): void {
        if(listener.exitStatement) {
             listener.exitStatement(this);
        }
    }
    public override accept<Result>(visitor: SimpleRustVisitor<Result>): Result | null {
        if (visitor.visitStatement) {
            return visitor.visitStatement(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class Variable_declarationContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public IDENTIFIER(): antlr.TerminalNode {
        return this.getToken(SimpleRustParser.IDENTIFIER, 0)!;
    }
    public type(): TypeContext {
        return this.getRuleContext(0, TypeContext)!;
    }
    public expression(): ExpressionContext {
        return this.getRuleContext(0, ExpressionContext)!;
    }
    public override get ruleIndex(): number {
        return SimpleRustParser.RULE_variable_declaration;
    }
    public override enterRule(listener: SimpleRustListener): void {
        if(listener.enterVariable_declaration) {
             listener.enterVariable_declaration(this);
        }
    }
    public override exitRule(listener: SimpleRustListener): void {
        if(listener.exitVariable_declaration) {
             listener.exitVariable_declaration(this);
        }
    }
    public override accept<Result>(visitor: SimpleRustVisitor<Result>): Result | null {
        if (visitor.visitVariable_declaration) {
            return visitor.visitVariable_declaration(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class Expression_statementContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public expression(): ExpressionContext {
        return this.getRuleContext(0, ExpressionContext)!;
    }
    public override get ruleIndex(): number {
        return SimpleRustParser.RULE_expression_statement;
    }
    public override enterRule(listener: SimpleRustListener): void {
        if(listener.enterExpression_statement) {
             listener.enterExpression_statement(this);
        }
    }
    public override exitRule(listener: SimpleRustListener): void {
        if(listener.exitExpression_statement) {
             listener.exitExpression_statement(this);
        }
    }
    public override accept<Result>(visitor: SimpleRustVisitor<Result>): Result | null {
        if (visitor.visitExpression_statement) {
            return visitor.visitExpression_statement(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}


export class ExpressionContext extends antlr.ParserRuleContext {
    public constructor(parent: antlr.ParserRuleContext | null, invokingState: number) {
        super(parent, invokingState);
    }
    public IDENTIFIER(): antlr.TerminalNode | null {
        return this.getToken(SimpleRustParser.IDENTIFIER, 0);
    }
    public NUMBER(): antlr.TerminalNode | null {
        return this.getToken(SimpleRustParser.NUMBER, 0);
    }
    public STRING(): antlr.TerminalNode | null {
        return this.getToken(SimpleRustParser.STRING, 0);
    }
    public BOOLEAN(): antlr.TerminalNode | null {
        return this.getToken(SimpleRustParser.BOOLEAN, 0);
    }
    public expression(): ExpressionContext[];
    public expression(i: number): ExpressionContext | null;
    public expression(i?: number): ExpressionContext[] | ExpressionContext | null {
        if (i === undefined) {
            return this.getRuleContexts(ExpressionContext);
        }

        return this.getRuleContext(i, ExpressionContext);
    }
    public expression_list(): Expression_listContext | null {
        return this.getRuleContext(0, Expression_listContext);
    }
    public override get ruleIndex(): number {
        return SimpleRustParser.RULE_expression;
    }
    public override enterRule(listener: SimpleRustListener): void {
        if(listener.enterExpression) {
             listener.enterExpression(this);
        }
    }
    public override exitRule(listener: SimpleRustListener): void {
        if(listener.exitExpression) {
             listener.exitExpression(this);
        }
    }
    public override accept<Result>(visitor: SimpleRustVisitor<Result>): Result | null {
        if (visitor.visitExpression) {
            return visitor.visitExpression(this);
        } else {
            return visitor.visitChildren(this);
        }
    }
}
